# based.guide.move

./: .cursorrules  .gitignore  .tool-versions  CONTRIBUTING.md  DEVELOPMENT.md  RAILWAY_SETUP.md  README.md  business.pptx  check_server_status.py  copy.txt  dev-docker.sh  dev-start-all.sh  dev-start.sh  dev.sh  docker-compose.dev.yml  error.html  lint-check.sh  notes.rtf  output.json  package-lock.json  package.json  play.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_server.py  test-monorepo.sh  website.odp  website.pptx
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
apps/backend/: .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt  start-backend.sh
apps/backend/src/: app.py  config.py
apps/backend/src/api/: auth.py  middleware.py  perplexity.py  prompt.py  routes.py
apps/backend/src/modules/: currency_utils.py  eu_utils.py  prompt_generator.py  schemas.py  story_generator.py  translator.py  validator.py
apps/backend/src/services/: exchange_rate_service.py  fetch_exchange_rates.py
apps/backend/tests/: test_conversion.py  test_exchange_rate_backlog.py  test_perplexity_client.py  test_prompt_appendix.py  test_prompt_generator.py  test_story_generator.py  test_translator.py  test_validator.py
apps/backend/tests/integration_tests/: main.py
apps/worker-exchange-rates/: pyproject.toml
apps/worker-exchange-rates/src/: main.py
backend/: .env.example  alembic.ini  api.py  app.py  config.py  database.py  get_tax_summaries.py  merge_markdowns.py  models.py  pyproject.toml  requirements.txt  setup.py  taxsummaries.py  trygemini.py
base_recommender/: README_DEPRECATED.md  fetch_exchange_rates.py  prompt_filter.py  recommender.py  requirements.txt  st_app.py  streamlit_app.py
base_recommender_backend/: README.md  app.py  config.py  env.example  mock_convert.py  requirements.txt  tax_migration_profile_test.json  validate_result.py
base_recommender_next_js/: .gitignore  .prettierignore  DEVELOPMENT.md  INTEGRATION_GUIDE.md  README.md  ZUSTAND_MIGRATION.md  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
config/: mypy.ini  pytest.ini
crawl4ai/: crawl_pwc.py
data_structures/: country_profile.json  perplexity_suggestion_profile.json  profile.json  profile.md  profile_tmi.md  recommendation_profile.json  todo.txt
docs/: postmark_issue.md  profile_schema.md  supabase-transition.md
frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  (+1 more)
(+17965 files in other folders)
